<resources>
    <string name="app_name">DeBrincar</string>
    <string name="title_activity_principal_anuncios">PrincipalAnuncios</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Navigation menu -->
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cad_nome_hint">Nome</string>
    <string name="cad_sobrenome_hint">Sobrenome</string>
    <string name="cad_cpf_hint">CPF</string>
    <string name="cad_nascimento_hint">Data de Nascimento</string>
    <string name="cad_cep_hint">CEP</string>
    <string name="cad_endereco_hint">Endereço</string>
    <string name="cad_email_hint">E-mail</string>
    <string name="cad_senha_hint">Senha</string>
    <string name="cad_confsenha_hint">Confirma Senha</string>
    <string name="btn_cadastrar">Cadastrar</string>
    <string name="adicionar_foto">Adicionar Foto</string>
    <string name="cad_cnpj_hint">CNPJ</string>
    <string name="cad_nomeresp_hint">Nome do Responsável</string>
    <string name="cad_sobrenomeresp_hint">Sobrenome do Responsável</string>
    <string name="cad_enderecoresp_hint">Endereço do Responsável</string>
    <string name="cad_cpfresp_hint">CPF do Responsável</string>
    <string name="cad_atuação_hint">Descrição da Atuação</string>
    <string name="nav_anuncios">Anúncios</string>
    <string name="nav_inserir_anuncio">Inserir Anúncio</string>
    <string name="nav_favoritos">Favoritos</string>
    <string name="nav_minha_conta">Minha Conta</string>
    <string name="nav_config">Configurações</string>
    <string name="nav_logout">Sair</string>
    <string name="nav_seguidores">Seguidores</string>
    <string name="btn_mensagem_anun">MENSAGEM</string>
    <string name="btn_solicitara_anun">SOLICITAR</string>
    <string name="btn_doar_anun">DOAR</string>
    <string name="title_activity_maps">Map</string>
    <string name="titulo_getimage_dialog">Selecione a opção:</string>

    <!-- Tipos de usuário -->
    <string name="profile_tipo_pessoa">Pessoa Física</string>
    <string name="profile_tipo_instituicao">Pessoa Jurídica</string>

    <!-- Tipos de anúncio -->
    <string name="anun_doacao">doacao</string>
    <string name="anun_solicitacao">solicitacao</string>
    <string name="anun_campanha">campanha</string>

    <!-- Tipos de imagens para upload no Firebase -->
    <string name="nova_imagem_anuncio">nova_imagem_anuncio</string>
    <string name="imagem_usuario">imagem_usuario</string>

    <!-- Nós no Firebase Database -->
    <string name="db_no_usuario">usuario</string>
    <string name="db_no_pessoafisica">usuario_pessoafisica</string>
    <string name="db_no_instituicao">usuario_pessoajuridica</string>
    <string name="db_no_anuncios">anuncios</string>
    <string name="db_no_anuncios_imagens">anuncios_imagens</string>
    <string name="db_no_favoritos">favoritos</string>
    <string name="db_no_seguidores">seguidores</string>
    <string name="db_no_usuario_anuncios">usuario_anuncios</string>
    <string name="db_no_solicitacoes">solicitacoes</string>

    <!-- Nós no Firebase Database -->
    <string name="campo_nome_usuario">nome</string>
    <string name="campo_sobrenome_usuario">sobrenome</string>

    <!-- Nós referentes às categorias dos items  no Firebase -->
    <string name="db_no_brinquedos">anun_brinquedos</string>
    <string name="db_no_vestuario">anun_vestuario</string>
    <string name="db_no_moveis">anun_moveis</string>
    <string name="db_no_outros">anun_outros</string>

    <string-array name="categorias_item">
        <item>Brinquedos</item>
        <item>Vestuário</item>
        <item>Móveis</item>
        <item>Outros</item>
    </string-array>

    <!-- Datas de prazo para campanha -->
    <string-array name="prazo_campanha">
        <item>7</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
        <item>60</item>
    </string-array>

    <!-- Nomes dos fragmentos - opções do EditProfile -->
    <string name="op_profile_editprofile">Editar cadastro</string>
    <string name="op_profile_anuncios">Anúncios cadastrados</string>
    <string name="op_profile_favoritos">Favoritos</string>
    <string name="op_profile_seguidores">Seguidores</string>

    <!-- Strings para TargetLista -->
    <string name="targetLista">target_lista</string>
    <string name="targetlista_favoritos">favoritos</string>
    <string name="targetlista_anunciosdastrados">anuncioscadastrados</string>
    <string name="targetlista_userid">userid</string>
    <string name="targetlista_seguidores">seguidores</string>

    <string name="seguir_btn">SEGUIR</string>
    <string name="seguindo_btn">SEGUINDO</string>
    <string name="cad_telefone_hint">Telefone</string>
    <string name="cad_descricao">Descrição/Atuação</string>


</resources>