<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Fragments.InstituicaoFragment">

    <!-- TODO: Update blank fragment layout -->
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="30dp">


            <ImageView
                android:id="@+id/set_imagem_inst"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:srcCompat="@drawable/carinha_adc_foto" />

            <TextView
                android:id="@+id/text_adfoto_inst"
                style="@style/TextoCadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/adicionar_foto"
                android:textAlignment="center"
                />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/cad_nome_inst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:theme="@style/TextoCadastro"
                app:met_floatingLabelText="@string/cad_nome_hint" />


            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/cad_cnpj_inst"
                android:theme="@style/TextoCadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="2dp"
                android:ems="10"
                app:met_floatingLabelText="@string/cad_cnpj_hint"
                android:inputType="number" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/cad_descricao_inst"
                android:theme="@style/TextoCadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="1dp"
                android:ems="10"
                app:met_floatingLabelText="@string/cad_atuação_hint"
                android:inputType="text" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/cad_endereço_inst"
                android:theme="@style/TextoCadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                app:met_floatingLabelText="@string/cad_endereco_hint"
                android:inputType="textPersonName" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/cad_cep_inst"
                android:theme="@style/TextoCadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                app:met_floatingLabelText="@string/cad_cep_hint"
                android:inputType="number" />

            <TextView
                android:id="@+id/dados_responsavel"
                style="@style/TextoCadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="30dp"
                android:text="Informações do Responsável pela Instituição"
                android:textAlignment="center"
                />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/cad_nome_responsavel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:theme="@style/TextoCadastro"
                app:met_floatingLabelText="@string/cad_nomeresp_hint" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/cad_sobrenome_responsavel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:theme="@style/TextoCadastro"
                app:met_floatingLabelText="@string/cad_sobrenomeresp_hint" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/cad_cpf_responsavel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:inputType="number"
                android:theme="@style/TextoCadastro"
                app:met_floatingLabelText="@string/cad_cpfresp_hint" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/cad_endereco_responsavel"
                android:theme="@style/TextoCadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="2dp"
                android:ems="10"
                app:met_floatingLabelText="@string/cad_enderecoresp_hint"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/cad_email_inst"
                style="@style/CaixaCadastro"
                android:layout_width="match_parent"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:hint="@string/cad_email_hint"
                android:inputType="textEmailAddress"
                />

            <EditText
                android:id="@+id/cad_senha_inst"
                style="@style/CaixaCadastro"
                android:layout_width="match_parent"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:hint="@string/cad_senha_hint"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/cad_conf_senha_inst"
                style="@style/CaixaCadastro"
                android:layout_width="match_parent"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:hint="@string/cad_confsenha_hint"
                android:inputType="textPassword" />


            <Button
                android:id="@+id/btn_cadastro_inst"
                style="@style/LoginBtn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/botao_alt"
                android:layout_marginStart="90dp"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="90dp"
                android:layout_marginRight="90dp"
                android:background="@drawable/botao_amarelo"
                android:text="@string/btn_cadastrar"
                android:textSize="@dimen/cadastro_text_size"
                android:elevation="30dp"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</FrameLayout>