<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.CadastroUser"
    android:fitsSystemWindows="true"
    android:background="@drawable/background_1080p_claro">

    <!-- TODO: Update blank fragment layout -->

    <ProgressBar
        android:id="@+id/pb_pessoafisica"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:translationZ="100dp"
        android:visibility="gone"
        />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="30dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/set_imagem"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:src="@drawable/carinha_adc_foto"
                app:civ_border_color="@color/azulMedio"
                app:civ_border_width="1dp" />
            f

            <TextView
                android:id="@+id/text_adfoto"
                style="@style/TextoCadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/adicionar_foto"
                android:textAlignment="center" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_pessoafisica"
                    style="@style/TextoCadastro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="setPessoaFisica"
                    android:text="@string/profile_tipo_pessoa" />

                <RadioButton
                    android:id="@+id/rb_pessoajuridica"
                    style="@style/TextoCadastro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:onClick="setPessoaJuridica"
                    android:text="@string/profile_tipo_instituicao" />
            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/azulClaro"
                android:theme="@style/TextoCadastroTheme"
                app:hintAnimationEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/cad_nome"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/cad_nome_hint"
                    android:inputType="textPersonName"
                    android:textColor="@color/azulEscuro"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/cad_sobrenome"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/cad_sobrenome_container"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColorHint="@color/azulClaro"
                android:theme="@style/TextoCadastroTheme"
                app:hintAnimationEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/cad_sobrenome"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/cad_sobrenome_hint"
                    android:inputType="textPersonName"
                    android:textColor="@color/azulEscuro"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/cad_cpf_container"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColorHint="@color/azulClaro"
                android:theme="@style/TextoCadastroTheme"
                app:hintAnimationEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/cad_cpf"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/cad_cpf_hint"
                    android:inputType="number"
                    android:textColor="@color/azulEscuro"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/cad_cnpj_container"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColorHint="@color/azulClaro"
                android:theme="@style/TextoCadastroTheme"
                android:visibility="gone"
                app:hintAnimationEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/cad_cnpj"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/cad_cnpj_hint"
                    android:inputType="number"
                    android:textColor="@color/azulEscuro"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/cad_descricao_container"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColorHint="@color/azulClaro"
                android:theme="@style/TextoCadastroTheme"
                android:visibility="gone"
                app:hintAnimationEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/cad_descricao"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/cad_descricao"
                    android:inputType="number"
                    android:textColor="@color/azulEscuro"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColorHint="@color/azulClaro"
                android:theme="@style/TextoCadastroTheme"
                app:hintAnimationEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/cad_endereco"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/cad_endereco_hint"
                    android:inputType="textLongMessage"
                    android:textColor="@color/azulEscuro"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </android.support.design.widget.TextInputLayout>


            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/TextoCadastro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginBottom="2dp"
                    android:text="Estado:"
                    app:layout_constraintBottom_toTopOf="@+id/spinner_estados_user"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    style="@style/TextoCadastro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="173dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="2dp"
                    android:text="Cidade:"
                    app:layout_constraintBottom_toTopOf="@+id/spinner_cidades_user"
                    app:layout_constraintEnd_toEndOf="parent" />

                <Spinner
                    android:id="@+id/spinner_estados_user"
                    android:layout_width="150dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginLeft="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Spinner
                    android:id="@+id/spinner_cidades_user"
                    android:layout_width="200dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/spinner_estados_user"
                    app:layout_constraintTop_toTopOf="parent" />


            </android.support.constraint.ConstraintLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColorHint="@color/azulClaro"
                android:theme="@style/TextoCadastroTheme"
                app:hintAnimationEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/cad_cep"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/cad_cep_hint"
                    android:inputType="number"
                    android:textColor="@color/azulEscuro"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColorHint="@color/azulClaro"
                android:theme="@style/TextoCadastroTheme"
                app:hintAnimationEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/cad_telefone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/cad_telefone_hint"
                    android:inputType="number"
                    android:textColor="@color/azulEscuro"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/caixa_cadastro_alt"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:elevation="5dp"
                android:textColorHint="@color/cinzaClaro"
                android:theme="@style/CaixaCadastro"
                app:hintEnabled="false">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/cad_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/fundo_caixa_cinza_cadastrouser"
                    android:hint="@string/cad_email_hint"
                    android:inputType="textEmailAddress"
                    android:paddingStart="25dp"
                    android:paddingLeft="25dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/caixa_cadastro_alt"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:elevation="5dp"
                android:textColorHint="@color/cinzaClaro"
                android:theme="@style/CaixaCadastro"
                app:hintEnabled="false">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/cad_senha"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/fundo_caixa_cinza_cadastrouser"
                    android:hint="@string/cad_senha_hint"
                    android:inputType="textPassword"
                    android:paddingStart="25dp"
                    android:paddingLeft="25dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/caixa_cadastro_alt"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:elevation="5dp"
                android:textColorHint="@color/cinzaClaro"
                android:theme="@style/CaixaCadastro"
                app:hintEnabled="false">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/cad_conf_senha"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/fundo_caixa_cinza_cadastrouser"
                    android:hint="@string/cad_confsenha_hint"
                    android:inputType="textPassword"
                    android:paddingStart="25dp"
                    android:paddingLeft="25dp" />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/btn_cadastro"
                style="@style/AnuncioBtn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/botao_alt"
                android:layout_marginStart="90dp"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="90dp"
                android:layout_marginRight="90dp"
                android:background="@drawable/fundo_botao_amarelo_cadastrar"
                android:elevation="10dp"
                android:text="@string/btn_cadastrar"
                android:textSize="15sp" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>